--- a/resources/assets/scss/pages/un-stuck/_un-stuck.scss
+++ b/resources/assets/scss/pages/un-stuck/_un-stuck.scss
@@ -7,6 +7,7 @@
         margin-left: auto;
         width: 100%;
     }
+
     .beliefs {
         display:flex;
         justify-content: space-between;
@@ -28,27 +29,27 @@
         }
 
         label {
-            position:absolute;
+            position: absolute;
             top: 6px;
             left: 10px;
         }
 
         .icon {
-            position:absolute;
+            position: absolute;
             bottom: 16px;
             left: 50%;
             margin-left: -16px;
             width: 32px;
             height: 32px;
-            overflow:hidden;
+            overflow: hidden;
             background: none;
             border: 0;
             padding: 0;
             svg {
                 width: 100%;
                 height: 100%;
-                background-color: rgba(255, 255, 255, 0.6);
                 border-radius: 50%;
+                //background-color: rgba(255, 255, 255, 0.6);
                 path {
                     fill: $lightRed;
                 }
@@ -58,7 +59,7 @@
         textarea {
             width: 100%;
             height: 100%;
-            padding: 50px 20px;
+            padding: 30px 20px; //this was 50px 20px;
             color: $fontColour;
             text-align:center;
             font-style: italic;
@@ -115,7 +116,8 @@
         }
     }
 
-    .the-affirmation, .the-belief {
+    .the-affirmation,
+    .the-belief {
         width: 221px;
         height: 256px;
         background-color: transparent;
@@ -132,7 +134,7 @@
         border-image-slice: 1;
         display: block;
         padding: 50px 25px 25px 25px;
-        text-align:center;
+        text-align: center;
         margin-bottom: 15px;
 
         @include breakpoint($brk-medium) {
@@ -208,6 +210,7 @@
         }
 
         textarea:focus + .icon {
+
             svg path {
                 fill: white;
             }
